- JWT implemented - GET is free from authentication - /auth/** is free from authentication - POST meals to database requires authentication - To authenticate a valid apiUser is required (validated by admin and validated email)